# Tzr

./: .gitignore  README.md
Contract./: Phase1.md
client/: package.json  tsconfig.json
client/src/: main.tsx
client/src/engine/: EngineMetaContext.tsx  types.ts  wasmEngine.ts
client/src/replay/: load.test.ts  load.ts  record.ts  storage.ts  types.ts  versionCheck.test.ts  versionCheck.ts
client/src/ui/: App.tsx  MainMenu.tsx
contract/: Phase1.md  Phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
engine/: Cargo.toml  README.md
engine/examples/: refresh_snapshots.rs
engine/scripts/: stress_wave.sh
engine/src/: error.rs  lib.rs  rng.rs
engine/src/model/: dungeon.rs  mod.rs  status.rs  trap.rs  unit.rs  wave.rs
engine/src/sim/: events.rs  mod.rs  pathfinding.rs  tests.rs  tick.rs
engine/src/sim/test_fixtures/: core_room_duel_snapshot.json  mod.rs  movement_to_core_snapshot.json  trapped_entry_hall_snapshot.json
engine/wasm/: Cargo.toml  package.json  tsconfig.json
engine/wasm/src/: lib.rs
engine/wasm/tests/: simulate_wave.test.ts
