[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "1"
rand = "0.8"
rand_pcg = "0.3"
smallvec = "1"

[dev-dependencies]
proptest = "1"
serde_json = "1"
